--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-numpy==1.23.5
-pandas==2.2.2
-scikit-learn==1.2.1
-seaborn==0.12.2
-streamlit==1.33.0
-plotly
-streamlit-option-menu
+streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
+openpyxl
+joblib
+
+
 
